--- a/modulo-04/package.json
+++ b/modulo-04/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "mocha": "yarn mocha"
+    "test": "npx mocha test.js"
   },
   "dependencies": {
     "axios": "^0.21.0"
   },
   "devDependencies": {
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "nock": "^13.0.5"
   }
 }
